--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@
 #spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
-
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
